# scutl-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/scutl_mcp/: __init__.py  server.py
